--- a/main.css
+++ b/main.css
@@ -3,8 +3,15 @@ h1{
     font-size: 100px
 }
 .btn {
-    margin-bottom: 10px;
+    font-size: 16px;
 }
 .center{
-    padding: 100px 0;
+    padding: 100px 50px;
+}
+#flip{
+    float: right;
+    border-radius: 5px;
+}
+.Txt{
+    margin-top: 20px;
 }
