--- a/main.css
+++ b/main.css
@@ -3,15 +3,15 @@ h1{
     font-size: 100px
 }
 .btn {
-    font-size: 16px;
+    margin-bottom: 10px;
 }
 .center{
-    padding: 100px 50px;
+    padding: 100px 0;
 }
 #flip{
     float: right;
-    border-radius: 5px;
+    border-radius: 3px;
 }
 .Txt{
-    margin-top: 20px;
+    margin: 20px 0px 20px 0px;
 }
